# weathergraph-rs

./: .gitignore  Cargo.toml  README.md
artifacts/: README.md
crates/weathergraph-cli/: Cargo.toml
crates/weathergraph-cli/src/: main.rs
crates/weathergraph-cli/tests/: cli.rs
crates/weathergraph-core/: Cargo.toml
crates/weathergraph-core/src/: config.rs  error.rs  features.rs  geometry.rs  graph.rs  lib.rs  model.rs  normalizer.rs  runner.rs  solar.rs  tensor.rs
crates/weathergraph-core/tests/: parity_fixture.rs
tests/fixtures/parity/: README.md
tests/fixtures/parity/one_step/: manifest.json
tmp/: project.md
tools/: export_parity_fixture.py  export_weights.py  fetch_arco_era5.py  weight_mapping.example.json  weight_mapping.keisler_2022.json
tools/tests/: test_export_weights.py  test_fetch_arco_era5.py
