[package]
name = "weathergraph-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
chrono.workspace = true
flate2.workspace = true
h3o.workspace = true
netcdf.workspace = true
ndarray.workspace = true
ndarray-npy.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
